--- a/src/styles/scss/header/_mobileNav.scss
+++ b/src/styles/scss/header/_mobileNav.scss
@@ -1,10 +1,12 @@
 header {
     @media screen and (max-width: 770px) {
         .header__container {
+            overflow-x: hidden;
+            z-index: 10;
             &.active {
                 background-color: rgba($color: #000000, $alpha: 0.2);
-
                 overflow-y: scroll;
+
                 .header__left,
                 .header__right {
                     transform: translateX(0);
